--- a/aboutme.html
+++ b/aboutme.html
@@ -87,7 +87,7 @@
   I am originally from Bilbao, a city of the Basque Country in the north of Spain, although I was born in Santander, another city in the north of Spain. I consider myself from Bilbao because that's the city I grew up in and I was brought up in. Also, as they say in Spanish, &ldquo;the cow is from where it grazes&rdquo; and &ldquo;people from Bilbao are born wherever they want.&rdquo;
   </p>
   <p>
-  Currently, I am a PhD student of Peter Bürgisser and Felipe Cucker at the Technische Universität Berlin. My interests are numerical algorithms and condition-based complexity, computational algebraic geometry, and random geometry. Luckily, I spend parts of the year traveling around the world either going to conferences, visiting colleagues or visiting Felipe at the CityU Hong Kong. Right now, I am writing my PhD thesis, which I will defend on the 28th of November of 2019.
+  Currently, I am a postdoctoral researcher at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas. My interests are numerical algorithms and condition-based complexity, computational algebraic geometry, and random geometry.
   </p>
   <p>
   Apart from discussing, thinking and writing about mathematics, I also enjoy other aspects of life. Here is a quasi-random alphabetical list of another ten things I enjoy: 1st, chatting and discussing random topics with friends (and sometimes other people) over a beer (or other equivalent drink); 2nd, drinking coffee; 3rd, folding origami figures; 4th, Iberian ham; 5th, reading non-mathematical books; 6th, riding a bike; 7th, sending postcards; 8th, swimming in the sea (when possible); 9th, walking while lost in my thoughts; and 10th, writing short stories, poems and calligrams. Of course, there are more things I enjoy, like cats, but listing things I enjoy is not something I enjoy.
@@ -102,10 +102,13 @@
   Additionally, during my studies, I was lucky enough to be given further opportunities to pursue further my mathematical interests. In 2011 and 2012, I attended the Undergraduate Summer Program of the Park City Mathematics Institute, thanks to grants provided to me by the program. In 2013, I could enjoy a summer undergraduate research experience at the ICMAT in Madrid under the supervision of Andrei Jaikin-Zapirain, thanks to a scholarship of the Spanish Government. And, in 2014, I enjoyed another undergraduate research experience at the University of the Basque Country under the supervision of Gustavo Adolfo Fernández Alcober, thanks to a scholarship of the Basque Government.
   </p>
   <p>
-  In 2014, I joined the Berlin Mathematical School, a joint graduate program in mathematics of the three Berlin universities,  as a Phase I student (i.e., a master student) thanks to a scholarship of &rdquo;la Caixa&rdquo; Foundation and the German Academic Exchange Service (DAAD). In 2016, after completing the Qualifying Exam of the BMS, I became a Phase II student. In 2017, I concluded the Master in Mathematics at the Technische Universität Berlin, after writing my master's thesis under the supervision of Peter Bürgisser. That same year, I became a PhD student of Peter Bürgisser and Felipe Cucker at the Technische Universität Berlin, thanks to a doctoral fellowship funded by the Einstein Foundation Berlin.
+  In 2014, I joined the Berlin Mathematical School, a joint graduate program in mathematics of the three Berlin universities, as a Phase I student (i.e., a master student) thanks to a scholarship of &rdquo;la Caixa&rdquo; Foundation and the German Academic Exchange Service (DAAD). In 2016, after completing the Qualifying Exam of the BMS, I became a Phase II student. In 2017, I concluded the Master in Mathematics at the Technische Universität Berlin, after writing my master's thesis under the supervision of Peter Bürgisser. That same year, I became a PhD student of Peter Bürgisser and Felipe Cucker at the Technische Universität Berlin, thanks to a doctoral fellowship funded by the Einstein Foundation Berlin. In 2019, I successfully defended my PhD thesis on the 28th of November and became a doctor.
   </p>
   <p>
-  During my stay at BMS, I have participated actively in the life of the school. During 2017, I was a BMS Student Representative; in 2018, I organized the BMS Student Conference, together with my fellow student representatives; and, since 2016, I am participating in the organization of the &ldquo;What is...?&rdquo; Seminar.
+  During my stay at BMS, I have participated actively in the life of the school. During 2017, I was a BMS Student Representative; in 2018, I organized the BMS Student Conference, together with my fellow student representatives; and, since 2016 until the end of my studies, I was participating in the organization of the &ldquo;What is...?&rdquo; Seminar.
+  </p>
+  <p>
+  In 2020, I started a postdoc at INRIA Paris and the IMJ-PRG under the mentorship of Fabrice Rouillier and Elias Tsigaridas.
   </p>
 </div>
 
