--- a/contact.html
+++ b/contact.html
@@ -82,28 +82,26 @@
      <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p align="left">
-<b>Technische Universität Berlin</b><br>
-Institut für Mathematik<br>
-Sekretariat MA 3-2<br>
-Straße des 17. Juni 136<br>
-10623 Berlin<br>
-GERMANY
+<b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br>
+Sorbonne Universite - Campus Pierre et Marie Curie<br>
+4, place Jussieu<br>
+75252 Paris Cedex 05<br>
+FRANCE
 </p>
 <p align="left">
-Room MA320 (3rd floor)
+Room TOBEUPDATED
 </p>
 
 <!--Place the code below where you want the link to be displayed-->
 <p align="left" id="obf"></p>
 
 <p align="left">
-+49 (0)30 314 - 29385 (phone)<br>
-+49 (0)30 314 - 25839 (fax)
+TOBEUPDATED (phone)
 </p>
 
-     <p align="left">
-     <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Institutional webpage</a></span>
-     </p>
+<!--<p align="left">
+<span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Institutional webpage</a></span>
+</p>-->
   </div>
 
   <div class="col-md-4" style="font-size:large;line-height: 3em;vertical-align: bottom;">
