--- a/contact_es.html
+++ b/contact_es.html
@@ -82,27 +82,25 @@
      <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
      <p align="left">
-<b>Technische Universität Berlin</b><br>
-Institut für Mathematik<br>
-Sekretariat MA 3-2<br>
-Straße des 17. Juni 136<br>
-10623 Berlin<br>
-ALEMANIA
+       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br>
+       Sorbonne Universite - Campus Pierre et Marie Curie<br>
+       4, place Jussieu<br>
+       75252 Paris Cedex 05<br>
+       FRANCIA
 </p>
 <p align="left">
-Habitaci&oacute;n MA320 (3&ordf; planta)
+Habitaci&oacute;n TOBEUPDATED
 </p>
 
 <p align="left" id="obf"></p>
 
 <p align="left">
-+49 (0)30 314 - 29385 (tel&eacute;fono)<br>
-+49 (0)30 314 - 25839 (fax)
+TOBEUPDATED (tel&eacute;fono)
 </p>
 
-     <p align="left">
+     <!--<p align="left">
      <span><a id="link" href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">P&aacute;gina institutional</a></span>
-     </p>
+   </p>-->
   </div>
 
   <div class="col-md-4" style="font-size:large;line-height: 3em;vertical-align: bottom;">
