--- a/cv.html
+++ b/cv.html
@@ -68,6 +68,7 @@
    <nav id="navbarCV" class="navbar-toggleable-md navbar-inverse navbar-custom2">
         <ul class="nav nav-pills">
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #ee2523!important;color: white!important;"><i class="ai ai-cv"></i></a></li>
+           <li class="nav-item"><a class="nav-link" href="#positions">Positions</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#grantsawards">Grants &amp; Awards</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#publications">Publications</a></li>
@@ -112,6 +113,34 @@
 <p>
   My ORCiD number is <a href="https://orcid.org/0000-0002-2904-1215" style="color:#A6CE39;font-variant:normal;font-style:normal;font-size: 1em;"><i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>.
 </p>
+<hr>
+   <div id="Positions">
+   <!-- Positions
+   ================================================== -->
+
+      <div class="row"><div class="col-md-12">
+      <h2  class="display-4">Positions</h2>
+      </div></div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+        <div class="property">Mentors:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
+        <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
+        <div class="property">Duration:</div><div class="value">October 2020 - September 2022</div>
+      </div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Postdoctoral Researcher at <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+        <div class="property">Mentors:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
+        <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
+        <div class="property">Duration:</div><div class="value">February 2020 - September 2020</div>
+      </div>
+</div>
+
 <hr>
    <div id="education">
    <!-- Education
@@ -174,6 +203,13 @@
       <br><div class="row"><div class="col-md-12">
       <h3>Scholarships</h3>
       </div></div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellowship</a></h4></div>
+        <div class="property">Framework:</div><div class="value">"Interaction" program of 2020</div>
+        <div class="property">Awarding Institution:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Foundation Sciences Mathématiques de Paris (FSMP)</a></div>
+        <div class="property">Duration:</div><div class="value">October 2020 - September 2022</div>
+      </div>
 
       <br><div class="cv">
       <div class="year">
@@ -422,7 +458,7 @@
 
       <br><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
       <br><div class="row"><div class="col-md-12">
