--- a/cv_es.html
+++ b/cv_es.html
@@ -69,6 +69,7 @@
    <nav id="navbarCV" class="navbar-toggleable-md navbar-inverse navbar-custom2">
         <ul class="nav nav-pills">
 	         <li class="nav-item"><a class="nav-link active" href="#" style="background-color: #ee2523!important;color: white!important;"><i class="ai ai-cv"></i></a></li>
+           <li class="nav-item"><a class="nav-link" href="#positions">Puestos</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#education">Educación</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#grantsawards">Becas y Premios</a></li>
 	         <li class="nav-item"><a class="nav-link" href="#publications">Publicaciones</a></li>
@@ -114,6 +115,34 @@
 <p>
   Mi número de ORCiD es <a href="https://orcid.org/0000-0002-2904-1215" style="color:#A6CE39;font-variant:normal;font-style:normal;font-size: 1em;"><i class="ai ai-orcid"></i> 0000-0002-2904-1215</a>.
 </p>
+<hr>
+   <div id="Positions">
+   <!-- Positions
+   ================================================== -->
+
+      <div class="row"><div class="col-md-12">
+      <h2  class="display-4">Puestos</h2>
+      </div></div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Becario Postdoctoral de la FSMP</a> en <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+        <div class="property">Mentores:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
+        <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
+        <div class="property">Duración:</div><div class="value">octubre 2020 - septiembre 2022</div>
+      </div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Investigador postodoctoral en <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h4></div>
+        <div class="property">Mentores:</div><div class="value"> <a href="https://who.rocq.inria.fr/Fabrice.Rouillier/">Fabrice Roullier</a></div>
+        <div class="property"></div><div class="value"><a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.imj-prg.fr/">IMJ-PRG</a></div>
+        <div class="property">Duración:</div><div class="value">febrero 2020 - septiembre 2020</div>
+      </div>
+</div>
+
 <hr>
    <div id="education">
    <!-- Education
@@ -176,6 +205,15 @@
       <br><div class="row"><div class="col-md-12">
       <h3>Becas</h3>
       </div></div>
+
+      <br><div class="cv">
+      <div class="year"><h4>2020-22</h4></div><div class="title"><h4>&emsp;<a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellowship</a></h4></div>
+      <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(Beca postdoctoral de la Fundación para las Ciencias Matemáticas de París)</em></h4></div>
+        <div class="property">Contexto:</div><div class="value">Programa "Interaction" de 2020</div>
+        <div class="property">Institución dadora:</div><div class="value"><a href="https://www.sciencesmaths-paris.fr/en/">Foundation Sciences Mathématiques de Paris (FSMP)</a></div>
+        <div class="property">Duración:</div><div class="value">octubre 2020 - septiembre 2022</div>
+      </div>
 
       <br><div class="cv">
       <div class="year">
@@ -393,7 +431,7 @@
       <br><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
       <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials, <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials (Inglés) [Sobre el número de ceros reales de oligonomios aleatorios], <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
       </div>
 
       <br><div class="cv">
@@ -403,7 +441,7 @@
 
       <br><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker y J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
       <br><div class="row"><div class="col-md-12">
