--- a/pikasle_en.html
+++ b/pikasle_en.html
@@ -243,7 +243,7 @@ Below we provide a list of the people who belong to each of these groups, ordere
 </div>
 <div class="col-md-6">
 
-<h4><em>Esporadic Collaborators</em></h4>
+<h4><em>Sporadic Collaborators</em></h4>
 
 <ul style="list-style-type:none;">
  <li><a href="http://www1.mat.uniroma1.it/people/fanelli/">Luca Fanelli</a> (2011)</li>
