--- a/index_es.html
+++ b/index_es.html
@@ -96,7 +96,7 @@
         <center>
         <h1>Josu&eacute; Tonelli Cueto</h1>
         <h2>Matemático</h2>
-        <h3><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">Doctor por la Technische Universit&auml;t Berlin</a></h3>
+        <h3>Investigador postdoctoral en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
         </center>
         <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
@@ -157,7 +157,7 @@
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1em;font-weight:bold;";
     }
-    x[0].innerHTML='<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_josue_tonelli_cueto">PhD por la TU Berlin</a>';
+    x[0].innerHTML='Investigador postdoctoral<br/>en<br/><a href="https://www.inria.fr/fr/centre-inria-de-paris">INRIA Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 0.4em;";
     x = document.getElementsByClassName("col-md-5");
