--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@ Sorbonne Universite - Campus Pierre et Marie Curie<br>
 FRANCE
 </p>
 <p align="left">
-Room TOBEUPDATED
+Room 15-16.414
 </p>
 
 <!--Place the code below where you want the link to be displayed-->
@@ -142,7 +142,8 @@ TOBEUPDATED (phone)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz><oe/><rz>wbfhr.gbaryyv-phrgb(NG)vaevn.se</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
+
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByClassName("col-md-4");
