--- a/contact_es.html
+++ b/contact_es.html
@@ -82,14 +82,14 @@
      <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
      <p align="left">
-       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br>
-       Sorbonne Universite - Campus Pierre et Marie Curie<br>
-       4, place Jussieu<br>
-       75252 Paris Cedex 05<br>
+       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
+       Sorbonne Universite - Campus Pierre et Marie Curie<br/>
+       4, place Jussieu<br/>
+       75252 Paris<br/>
        FRANCIA
 </p>
 <p align="left">
-Habitaci&oacute;n TOBEUPDATED
+Habitaci&oacute;n 15-16.414
 </p>
 
 <p align="left" id="obf"></p>
@@ -141,7 +141,7 @@ TOBEUPDATED (tel&eacute;fono)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz><oe/><rz>wbfhr.gbaryyv-phrgb(NG)vaevn.se</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
     if (screen.width <= 699) {
     var x;
     x = document.getElementsByClassName("col-md-4");
