--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,10 @@
      <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p align="left">
-<b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br>
-Sorbonne Universite - Campus Pierre et Marie Curie<br>
-4, place Jussieu<br>
-75252 Paris Cedex 05<br>
+<b>IMJ-PRG</b><br/>
+Sorbonne Universite<br/>Campus Pierre et Marie Curie<br/>
+4, place Jussieu<br/>
+75252 Paris<br/>
 FRANCE
 </p>
 <p align="left">
