--- a/contact_es.html
+++ b/contact_es.html
@@ -82,8 +82,8 @@
      <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
      <p align="left">
-       <b>Institut de Mathematiques de Jussieu - Paris Rive Gauche</b><br/>
-       Sorbonne Universite - Campus Pierre et Marie Curie<br/>
+       <b>IMJ-PRG</b><br/>
+       Sorbonne Universite<br/>Campus Pierre et Marie Curie<br/>
        4, place Jussieu<br/>
        75252 Paris<br/>
        FRANCIA
