--- a/pikasle_en.html
+++ b/pikasle_en.html
@@ -642,7 +642,7 @@ The magazine obtained two prizes in recognition of its achievements:
 </p>
 <ul style="list-style-type:none;">
 <li>
-2013 &ndash; <b>Honorable mention in the category &ldquo;Works of Popularization of Science. Media&rdquo; in the <a href="http://anteriores.cienciaenaccion.org/es/2013/index-premiados.html"><em>XIV contest of Science in Action</em></a></b>. Handed in October 2013.
+2013 &ndash; <b>Honorable mention in the category &ldquo;Works of Popularization of Science. Media&rdquo; in the <a href="http://anteriores.cienciaenaccion.org/es/2013/index-premiados.html"><em>XIV Contest of Science in Action</em></a></b>. Handed in October 2013.
 
 </li><li>
 2012 &ndash; <b>First Prize in the category of <em>Science</em> in the <a href="https://www.ehu.eus/es/web/ikasleak/iii-deialdia"><em>III Prizes to students who have best boradcasted the image of the University of the Basque Country</em></a></b>. Handed in November 2012.
@@ -651,17 +651,17 @@ The magazine obtained two prizes in recognition of its achievements:
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué y Esther Domínguez, entonces decana de la ZTF-FCT, en la entrega de los III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU"/>
+<img style="width:90%;" src="pikasle/premio0.jpg" alt="Ricardo, Josué y Esther Domínguez, then Dean of the ZTF-FCT, in the ceremony of the III Prizes to students who have best boradcasted the image of the University of the Basque Country"/>
 <p style="margin:0;">
 Ricardo, Josué and Esther Domínguez,<br>then dean of the ZTF-FCT,<br>in the awards ceremony<br>of the University of the Basque Country
 </p>
 </div>
 <div class="col-md-4" style="text-align:center;padding-top: 3%;">
-<img style="width:90%;" src="pikasle/premio1.jpg" alt="Parte del equipo de $\pi$kasle en la entrega de los III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU"/>
+<img style="width:90%;" src="pikasle/premio1.jpg" alt="Part of the team of $\pi$kasle in the ceremony of the III Prizes to students who have best boradcasted the image of the University of the Basque Country"/>
 <p style="margin:0;">Part of the team of $\pi$kasle<br>in the awards ceremony<br>of the University of the Basque Country
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 9%;">
-<img style="width:90%;" src="pikasle/premio2.jpg" alt="Josué Tonelli-Cueto recogiendo el premio de PIkasle en XIV Ciencia en Acción"/>
+<img style="width:90%;" src="pikasle/premio2.JPG" alt="Josué Tonelli-Cueto receiving the prize of PIkasle in XIV Contest of Science in Action"/>
 <p style="margin:0;">Josué in the awards ceremony<br>of XIV Science in Action
 </p></div>
 </div>
@@ -714,7 +714,7 @@ After the first year, PIkasle became established and was ready to take more peop
 </div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo de PIkasle"/></a>
+<a href="pikasle/design0.png"><img style="width:90%;" src="pikasle/design0.png" alt="Logo of PIkasle"/></a>
 <p style="margin:0;">
 Logo of $\pi kasle$<br><small>(Design by Maitane Amor)</small>
 </p>
@@ -723,7 +723,7 @@ This logo was proposed by Maitane Amor, as well as the name. This was the most p
 </p></div>
 
 <div class="col-md-4" style="text-align:center;padding-top: 6%;">
-<a href="pikasle/design4.jpg"><img style="width:90%;" src="pikasle/design4.jpg" alt="Pu&ntilde;o de Hierro en PIkasle"/></a>
+<a href="pikasle/design4.jpg"><img style="width:90%;" src="pikasle/design4.jpg" alt="Pu&ntilde;o de Hierro in PIkasle"/></a>
 <p style="margin:0;">
 Special design of $\pi kasle$<br> for the shirt of Julio García
 </p>
