--- a/pikasle_eus.html
+++ b/pikasle_eus.html
@@ -667,7 +667,7 @@ Ricardo, Josué y Esther Domínguez,<br>entonces decana de la ZTF-FCT,<br>en la 
 <p style="margin:0;">Parte del equipo de $\pi$kasle<br>en la entrega de los premios de la UPV/EHU
 </p></div>
 <div class="col-md-4" style="text-align:center;padding-top: 9%;">
-<img style="width:90%;" src="pikasle/premio2.jpg" alt="Josué Tonelli-Cueto recogiendo el premio de PIkasle en XIV Ciencia en Acción"/>
+<img style="width:90%;" src="pikasle/premio2.JPG" alt="Josué Tonelli-Cueto recogiendo el premio de PIkasle en XIV Ciencia en Acción"/>
 <p style="margin:0;">Josué en la entraga de premios<br>de XIV Ciencia en Acción
 </p></div>
 </div>
